Updated Page Title and some CSS

--- a/playmor/public_html/yard/index.html
+++ b/playmor/public_html/yard/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>yard v220808</title>
+    <title>3D Swing Set Builder | PlayMor Swing Sets</title>
 
     <style>
       #blank_slate_div {
@@ -1215,12 +1215,12 @@
         class="custom-controls"
         style="display: none; left: calc(-164.5px + 50vw)"
       >
-        <div id="custom-controls-delete" style="">
+        <div id="custom-controls-delete">
           <img
             src="images/image_6eedc2a9.png"
           />
         </div>
-        <div class="custom-controls-line" style=""></div>
+        <div class="custom-controls-line"></div>
         <div class="custom-controls-color-container">
           <div
             onclick="Colorize ( 0x004983)"
@@ -1253,7 +1253,7 @@
       <div class="custom-controls-roof" style="display: none">
         <div class="custom-controls-roof-content">
           <div class="custom-controls-text">CANOPY</div>
-          <div class="custom-controls-line" style=""></div>
+          <div class="custom-controls-line"></div>
           <div class="custom-controls-color-canopy">
             <div
               onclick="Change_roof_canopy_color ( 0x004983)"
@@ -1299,7 +1299,7 @@
         </div>
         <div class="custom-controls-roof-content">
           <div class="custom-controls-text">POLY</div>
-          <div class="custom-controls-line" style=""></div>
+          <div class="custom-controls-line"></div>
           <div class="custom-controls-color-poly">
             <div
               onclick="Change_roof_poly_color ( 0x01664b)"
