--- a/playmor/public_html/yard/index.html
+++ b/playmor/public_html/yard/index.html
@@ -58,7 +58,7 @@
       .slider {
         -webkit-appearance: none;
         width: 100%;
-        height: 20px;
+        height: 18px;
         border-radius: 5px;
         background: #d3d3d3;
         outline: none;
@@ -180,18 +180,6 @@
         width: 180px;
         height: 180px;
         animation: spin 3s linear infinite;
-      }
-
-      .mulch {
-        height: 58vh;
-        width: 45vh;
-        border-radius: 4vh;
-        background: rgba(0, 0, 0, 0.5);
-        left: 22.5vh;
-        top: calc(39vh - 70px);
-        cursor: pointer;
-        position: absolute;
-        display: none;
       }
 
       body {
@@ -367,7 +355,7 @@
 
       .top-controls {
         position: absolute;
-        top: 40px;
+        top: 4vh;
       }
 
       .xxxzoom-slder {
@@ -376,16 +364,6 @@
         position: absolute;
         top: 60px;
         left: 40px;
-      }
-
-      .mulch-length-slider {
-        width: 100%;
-        height: 15px;
-      }
-
-      .mulch-width-slider {
-        width: 100%;
-        height: 15px;
       }
 
       .xxzoom-top {
@@ -400,8 +378,8 @@
       }
 
       .zoom-bottom {
-        width: 30px;
-        height: 30px;
+        width: 28px;
+        height: 28px;
         top: 55px;
         left: 5px;
       }
@@ -413,12 +391,12 @@
 
       #zum_div {
         display: flex;
+        margin-top: 10px;
       }
 
       .zum_image {
         width: 30px;
         height: 30px;
-        left: flex;
       }
 
       .xxxui-slider-handle {
@@ -582,12 +560,33 @@
         text-align: center;
       }
 
+      .mulch {
+        width: 40vh;
+        border-radius: 4vh;
+        background: rgba(0, 0, 0, 0.5);
+        left: 22.5vh;
+        top: calc(39vh - 70px);
+        cursor: pointer;
+        position: absolute;
+        display: none;
+      }
+
+      .mulch-length-slider {
+        width: 100%;
+        height: 15px;
+      }
+
+      .mulch-width-slider {
+        width: 100%;
+        height: 15px;
+      }
+
       .mulch-content {
         height: 100vh;
       }
 
       .mulch-options {
-        padding: 4vh;
+        padding: 3.2vh;
         color: white;
         font-family: "Segoe UI", Arial, sans-serif;
       }
@@ -599,7 +598,7 @@
       }
 
       .mulch-options-title-first {
-        font-size: 3.3vh;
+        font-size: 3.1vh;
       }
 
       .mulch-options-title-second {
