More CSS updates

--- a/playmor/public_html/yard/index.html
+++ b/playmor/public_html/yard/index.html
@@ -128,6 +128,7 @@
         top: 0.5vmax;
         right: 1vmax;
         cursor: pointer;
+        font-size: 4vh;
       }
 
       .tab {
@@ -395,8 +396,8 @@
       }
 
       .zum_image {
-        width: 30px;
-        height: 30px;
+        width: 28px;
+        height: 28px;
       }
 
       .xxxui-slider-handle {
@@ -561,7 +562,7 @@
       }
 
       .mulch {
-        width: 40vh;
+        width: 36vh;
         border-radius: 4vh;
         background: rgba(0, 0, 0, 0.5);
         left: 22.5vh;
